<resources>
    <string name="app_name">finalProject</string>
    <string name="pizza">Pizza</string>
    <string name="order_name">Order Name</string>
    <string name="you_have_2x_free_ndelivery_coupon">You have 2x free \ndelivery coupon</string>
    <string name="search_food_drink_etc">Search Food, Drink, etc</string>
    <string name="sherbrooke">Sherbrooke</string>
    <string name="deliver_to">Deliver To</string>
    <string name="burger">Burger</string>
    <string name="chicken">Chicken</string>
    <string name="hotdog">Hotdog</string>
    <string name="sushi">Sushi</string>
    <string name="meat">Meat</string>
    <string name="drinks">Drinks</string>
    <string name="more">More</string>
    <string name="hights_rating_in_town">Hights rating in Town</string>
    <string name="view_all">View all</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="support">Support</string>
    <string name="settings">Settings</string>
    <string name="_0">0</string>
    <string name="title">title</string>
    <string name="_20min">20min</string>
    <string name="elijah">Elijah</string>
    <string name="energy">Energy</string>
    <string name="_0cal">0cal</string>
    <string name="rating">Rating</string>
    <string name="delivery">Delivery</string>
    <string name="min">- min</string>
    <string name="quantity_order">Quantity order</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="plus">+</string>
    <string name="num">0</string>
    <string name="minus">-</string>
    <string name="description">Satisfy your cravings with our juicy Cheese Burger. \n Served with crispy fries and a drink</string>
    <string name="price">$12</string>
    <string name="cheese_burger">Cheese Burger</string>
    <string name="rating_num">0</string>
</resources>