<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    tools:context=".Activity.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/foodPic"
                    android:layout_width="wrap_content"
                    android:layout_height="365dp"
                    android:src="@drawable/fast_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <ImageView
                    android:id="@+id/backBtnn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:padding="8dp"
                    android:src="@drawable/arrow"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                   />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/white_background"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33">

                        <ImageView
                            android:id="@+id/timeImg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/time"
                            app:layout_constraintBottom_toTopOf="@+id/deliveryTxt"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/timeTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="19dp"
                            android:layout_marginStart="4dp"
                            android:text="@string/min"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/timeImg"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@id/timeImg"
                            app:layout_constraintTop_toTopOf="@id/timeImg"
                            app:layout_constraintVertical_bias="0" />

                        <TextView
                            android:id="@+id/deliveryTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delivery"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="@+id/timeTxt"
                            app:layout_constraintStart_toStartOf="@+id/timeImg"
                            app:layout_constraintTop_toBottomOf="@+id/timeImg" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/view"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/grey"/>
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33">

                        <ImageView
                            android:id="@+id/starImg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/star"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/StarTxt"
                            android:layout_width="9dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="4dp"
                            android:text="@string/rating_num"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/starImg"
                            app:layout_constraintBottom_toTopOf="@+id/rateTxt"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@id/starImg"
                            app:layout_constraintTop_toTopOf="@id/starImg" />

                        <TextView
                            android:id="@+id/rateTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="@+id/StarTxt"
                            app:layout_constraintStart_toStartOf="@+id/starImg"
                            app:layout_constraintTop_toBottomOf="@+id/starImg" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/view2"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/grey" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33">

                        <ImageView
                            android:id="@+id/flameImg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:src="@drawable/flame"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />

                        <TextView
                            android:id="@+id/calTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/_0cal"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/flameImg"

                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@id/flameImg"
                            app:layout_constraintTop_toTopOf="@id/flameImg" />


                        <TextView
                            android:id="@+id/energyTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/energy"
                            android:textColor="@color/black"
                            app:layout_constraintEnd_toEndOf="@+id/calTxt"
                            app:layout_constraintStart_toStartOf="@+id/flameImg"
                            app:layout_constraintTop_toBottomOf="@+id/flameImg" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="24dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/foodPic">

                    <TextView
                        android:id="@+id/titleTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cheese_burger"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/priceTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/price"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/green"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:id="@+id/descriptionTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTxt">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:text="@string/quantity_order"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/grey_background"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/minusBtn"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_margin="4dp"
                            android:background="@drawable/white_background"
                            android:gravity="center"
                            android:text="@string/minus"
                            android:textSize="21sp"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/numberitemTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:gravity="center"
                            android:text="@string/num"
                            android:textColor="@color/black"
                            android:textSize="21sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/plusBtn"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_margin="4dp"
                            android:background="@drawable/white_background"
                            android:gravity="center"
                            android:text="@string/plus"
                            android:textSize="21sp"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/addToCartBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="24dp"
                    android:layout_weight="1"
                    android:background="@drawable/green_button_background"
                    android:text="@string/add_to_cart"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>