<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/white_background">

    <ImageView
        android:id="@+id/pic2"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_margin="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fast_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/titleTxt"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="title"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/pic2"
        app:layout_constraintTop_toTopOf="@+id/pic2" />

    <TextView
        android:id="@+id/feeEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0"
        android:textColor="@color/green"
        android:textSize="18sp"
        style="@style/textStyle"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/pic2"
        app:layout_constraintStart_toStartOf="@+id/titleTxt"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <TextView
        android:id="@+id/totalEachItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="$0"
        android:textColor="@color/green"
        android:textSize="18sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/titleTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleTxt" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/category_background"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/feeEachItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/feeEachItem">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_background"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/minusBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="4dp"
                android:background="@drawable/white_background"
                android:gravity="center"
                android:text="@string/minus"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/numberitemTxt"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/num"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plusBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="4dp"
                android:background="@drawable/white_background"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>